<resources>
    <string name="app_name">android-util</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_adapter">通用适配器测试</string>
    <string name="adapterlibrary">ListView、GridView和RecycleView适配器封装</string>
    <string name="title_activity_list_dialog_example">自定义列表对话框测试</string>
    <string name="list_dialog">列表对话框</string>
    <string name="title_activity_confirm_example">自定义确定对话框测试</string>
    <string name="confirm_dialog">确定对话框</string>
    <string name="title_activity_loading_dialog_example">进度框测试</string>
    <string name="loading_dialog">进度框</string>
    <string name="select_image">图片选择(类似微信图片选择)</string>
    <string name="browse_image">图片浏览(类似微博图片浏览)</string>
    <string name="map">百度地图封装</string>
    <string name="map_lable">百度地图封装测试</string>
    <string name="fresco">Fresco+PhotoDraweeView使用</string>
    <string name="fresco_lable">fresco使用测试</string>
    <string name="eventBus">EventBus使用测试</string>
    <string name="eventbus">EventBus使用</string>
    <string name="titleBar">自定义标题栏</string>
    <string name="title">默认标题栏</string>
    <string name="title2">修改标题栏默认颜色</string>
    <string name="title3">显示标题栏右菜单</string>
    <string name="right">保存</string>
    <string name="title4">标题居中隐藏返回</string>
    <string name="title5">标题居中更换菜单</string>
    <string name="tablayoutpager">tablayoutpager测试</string>
    <string name="current_city">上海</string>
    <string name="current_city_tip">你当前位置：</string>
    <string name="finish_activity">关闭当前activity</string>
    <string name="city_test">上海</string>
    <string name="eventbus_tip">EventBus是一个发布 / 订阅的事件总线</string>
    <string name="sorry_no_find">抱歉，未找到结果</string>
    <string name="exit">确定退出吗？</string>
    <string name="click_confirm">你点击了确定</string>
    <string name="male">男</string>
    <string name="operation">操作成功</string>
    <string name="delete_success">删除成功</string>
    <string name="you_select">你选择了</string>
    <string name="load">加载中...</string>
    <string name="you_click">你点击了第</string>
    <string name="ge">个</string>
    <string name="long_an">你长按了第</string>
    <string name="current_area">当前地区</string>
    <string name="menu1">菜单一</string>
    <string name="menu2">菜单二</string>
    <string name="menu3">菜单三</string>
    <string name="di">第</string>
    <string name="animation">动画学习</string>
    <string name="alpha">透明动画</string>
    <string name="gao_de">高德地图定位</string>
    <string name="city_select">城市选择2</string>
    <string name="frame">帧动画</string>
    <string name="layout_animation">LayoutAnimation</string>
    <string name="bufferknife">butterknife</string>
    <string name="object_animation">属性动画</string>
    <string name="health_animation">仿QQ健康（来自网上）</string>
    <string name="path_animation">path类</string>
    <string name="get_data">获取数据</string>
    <string name="select_image_dialog">图片选择(调用图库)</string>
    <string name="select_image1">选择的图片</string>
    <string name="start_download1">开始下载</string>
    <string name="stop_download">暂停下载</string>
    <string name="resume_download">恢复下载</string>
    <string name="fragment_fragment">fragment嵌套fragment</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="no_found_file">本地文件不存在</string>
    <string name="take_photo_no_cut">拍照压缩不经过裁剪</string>
    <string name="hide_title_bottom">上滑隐藏标题栏和底部导航菜单</string>
    <string name="ji_shi_quan_finish">计时全部结束</string>
    <string name="location">授权失败</string>
    <string name="operater_error">操作失败</string>
    <string name="tablayout">TabLayout封装</string>
    <string name="sortlistview">城市选择1</string>
    <string name="recyclerview">RecyclerView禁止上下滑动和滑动到指定位置</string>
    <string name="greendao">GreenDao</string>
    <string name="ultra_ptr">ultra_ptr</string>
    <string name="edittext_edittext_botton">输入法弹起EditText，同时不遮挡EditText下面的Botton</string>
    <string name="textview">TextView前后添加图片</string>
    <string name="countdown_time">列表中的倒计时</string>
    <string name="swipebacklayout">swipeBackLayout</string>
    <string name="design">design</string>
    <string name="text_change_picture">文字转化为图片，宽度一致</string>
    <string name="downloadlibrary">downloadlibrary</string>
    <string name="surfaceview_mediaplayer">SurfaceView+MediaPlayer</string>
    <string name="rxjava">networklibrary(Java版)</string>
    <string name="expandablelistview_checkbox">ExpandableListView+CheckBox</string>
    <string name="activity">Activity对话框</string>
    <string name="file_delete_re_down">文件已被删除，点击下载将重新下载</string>
    <string name="start_download">下载开始...</string>
    <string name="download_finish">下载完成...</string>
    <string name="file_exist">文件不存在</string>
    <string name="error_code">错误代码</string>
    <string name="this_is_menu">这是菜单</string>
    <string name="COMPLETE">刷新完成</string>
    <string name="swipe_to_refresh">松开</string>
    <string name="he_ji">合计</string>
</resources>
