<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/adapterButton"
            style="@style/style_btn"
            android:text="@string/adapterlibrary"/>

        <Button
            android:id="@+id/loading"
            style="@style/style_btn"
            android:text="@string/loading_dialog"/>

        <Button
            android:id="@+id/selectImage"
            style="@style/style_btn"
            android:text="@string/select_image"/>
        <Button
            android:id="@+id/selectImageDialog"
            style="@style/style_btn"
            android:text="@string/select_image_dialog"/>
        <Button
            android:id="@+id/matisse"
            style="@style/style_btn"
            android:text="matisse(知乎开源的图片选择)"/>

        <Button
            android:id="@+id/browseImage"
            style="@style/style_btn"
            android:text="@string/browse_image"/>

        <Button
            android:id="@+id/map"
            style="@style/style_btn"
            android:text="@string/map"/>
        <Button
            android:id="@+id/amap"
            style="@style/style_btn"
            android:text="@string/gao_de"/>

        <Button
            android:id="@+id/fresco"
            style="@style/style_btn"
            android:text="@string/fresco"/>

        <Button
            android:id="@+id/titleBar"
            style="@style/style_btn"
            android:text="@string/titleBar"/>

        <Button
            android:id="@+id/tabLayoutPager"
            style="@style/style_btn"
            android:text="@string/tablayout"/>
        <Button
            android:id="@+id/extendRecyclerView"
            style="@style/style_btn"
            android:text="@string/recyclerview"/>

        <Button
            android:id="@+id/sortListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/sortlistview"/>
        <Button
            android:id="@+id/selectCity"
            style="@style/style_btn"
            android:text="@string/city_select"/>
        <Button
            android:id="@+id/room"
            style="@style/style_btn"
            android:text="room"/>

        <Button
            android:id="@+id/ultraPtr"
            style="@style/style_btn"
            android:text="@string/ultra_ptr"/>
        <Button
            android:id="@+id/animation"
            style="@style/style_btn"
            android:text="@string/animation"/>
        <Button
            android:id="@+id/expandableListViewCheckbox"
            style="@style/style_btn"
            android:text="@string/expandablelistview_checkbox"/>
        <Button
            android:id="@+id/RxJava2"
            style="@style/style_btn"
            android:text="networklibrary"/>
        <Button
            android:id="@+id/inputEditButton"
            style="@style/style_btn"
            android:text="@string/edittext_edittext_botton"/>
        <Button
            android:id="@+id/textImage"
            style="@style/style_btn"
            android:text="@string/textview"/>
        <Button
            android:id="@+id/downloadlibrary"
            style="@style/style_btn"
            android:text="@string/downloadlibrary"/>
        <Button
            android:id="@+id/surfaceView"
            style="@style/style_btn"
            android:text="@string/surfaceview_mediaplayer"/>
        <Button
            android:id="@+id/textConversionBitmap"
            style="@style/style_btn"
            android:text="@string/text_change_picture"/>
        <Button
            android:id="@+id/hideTitleBottom"
            style="@style/style_btn"
            android:text="@string/hide_title_bottom"/>
        <Button
            android:id="@+id/luban"
            style="@style/style_btn"
            android:text="Luban压缩"/>
        <Button
            android:id="@+id/MPAndroidChart"
            style="@style/style_btn"
            android:text="MPAndroidChart图表"/>
        <Button
            android:id="@+id/swipeToLoadLayout"
            style="@style/style_btn"
            android:text="SwipeToLoadLayout"/>
        <Button
            android:id="@+id/tableView"
            style="@style/style_btn"
            android:text="tableView"/>
        <Button
            android:id="@+id/navigationTop"
            style="@style/style_btn"
            android:text="navigationTop"/>
        <Button
            android:id="@+id/webOpenPhoto"
            style="@style/style_btn"
            android:text="webview选择图片"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
