<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.yanxing.ui.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/adapter_button"
            style="@style/style_btn"
            android:text="@string/adapterlibrary"/>

        <Button
            android:id="@+id/list_dialog_button"
            style="@style/style_btn"
            android:text="@string/list_dialog"/>

        <Button
            android:id="@+id/confirm_dialog_button"
            style="@style/style_btn"
            android:text="@string/confirm_dialog"/>

        <Button
            android:id="@+id/loading_dialog_button"
            style="@style/style_btn"
            android:text="@string/loading_dialog"/>

        <Button
            android:id="@+id/select_image"
            style="@style/style_btn"
            android:text="@string/select_image"/>
        <Button
            android:id="@+id/select_image_dialog"
            style="@style/style_btn"
            android:text="@string/select_image_dialog"/>

        <Button
            android:id="@+id/browse_image"
            style="@style/style_btn"
            android:text="@string/browse_image"/>

        <Button
            android:id="@+id/map"
            style="@style/style_btn"
            android:text="@string/map"/>
        <Button
            android:id="@+id/amap"
            style="@style/style_btn"
            android:text="@string/gao_de"/>

        <Button
            android:id="@+id/fresco"
            style="@style/style_btn"
            android:text="@string/fresco"/>

        <Button
            android:id="@+id/eventbus"
            style="@style/style_btn"
            android:text="@string/eventbus"/>

        <Button
            android:id="@+id/titleBar"
            style="@style/style_btn"
            android:text="@string/titleBar"/>

        <Button
            android:id="@+id/tabLayoutPager"
            style="@style/style_btn"
            android:text="tablayoutpagerlibrary"/>

        <Button
            android:id="@+id/recyclerView"
            style="@style/style_btn"
            android:text="recyclerView"/>

        <Button
            android:id="@+id/sortListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="sortListView"/>

        <Button
            android:id="@+id/greenDao"
            style="@style/style_btn"
            android:text="GreenDao"/>

        <Button
            android:id="@+id/selectCity"
            style="@style/style_btn"
            android:text="@string/city_select"/>
        <Button
            android:id="@+id/ultra_ptr"
            style="@style/style_btn"
            android:text="ultra_ptr"/>
        <Button
            android:id="@+id/xRecyclerView"
            style="@style/style_btn"
            android:text="xRecyclerView"/>
        <Button
            android:id="@+id/threadTest"
            style="@style/style_btn"
            android:text="activityDestroyThread"/>
        <Button
            android:id="@+id/animation"
            style="@style/style_btn"
            android:text="animation"/>
        <Button
            android:id="@+id/dialog"
            style="@style/style_btn"
            android:text="activity对话框"/>
        <Button
            android:id="@+id/ButterKnife"
            style="@style/style_btn"
            android:text="ButterKnife"/>
        <Button
            android:id="@+id/expandableListViewCheck"
            style="@style/style_btn"
            android:text="ExpandableListView+CheckBox"/>
        <Button
            android:id="@+id/RxJava"
            style="@style/style_btn"
            android:text="RxJava"/>
        <Button
            android:id="@+id/inputEditButton"
            style="@style/style_btn"
            android:text="inputEditButton"/>
        <Button
            android:id="@+id/textImage"
            style="@style/style_btn"
            android:text="textImage"/>
        <Button
            android:id="@+id/downloadlibrary"
            style="@style/style_btn"
            android:text="downloadlibrary"/>
        <Button
            android:id="@+id/nestFragment"
            style="@style/style_btn"
            android:text="@string/fragment_fragment"/>
        <Button
            android:id="@+id/surfaceView"
            style="@style/style_btn"
            android:text="SurfaceView+MediaPlayer"/>
        <Button
            android:id="@+id/progressBar"
            style="@style/style_btn"
            android:text="progressBar"/>
        <Button
            android:id="@+id/circleProgressBar"
            style="@style/style_btn"
            android:visibility="gone"
            android:text="circleProgressBar"/>
    </LinearLayout>
</ScrollView>
