<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <Button
        android:id="@+id/alpha"
        style="@style/Animation_Button"
        android:text="@string/alpha"/>

    <Button
        android:id="@+id/frame"
        style="@style/Animation_Button"
        android:text="@string/frame"/>

    <ImageView
        android:id="@+id/frameImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin20"
        android:layout_marginRight="@dimen/margin20"
        android:layout_marginTop="@dimen/margin8"/>

    <Button
        android:id="@+id/layoutAnimation"
        style="@style/Animation_Button"
        android:text="@string/layout_animation"/>

    <Button
        android:id="@+id/ObjectAnimation"
        style="@style/Animation_Button"
        android:text="@string/object_animation"/>

    <Button
        android:id="@+id/health_animation"
        style="@style/Animation_Button"
        android:text="@string/health_animation"/>

    <Button
        android:id="@+id/path_animation"
        style="@style/Animation_Button"
        android:text="@string/path_animation"/>

    <Button
        android:id="@+id/heartBubbleView"
        style="@style/Animation_Button"
        android:text="heartBubbleView"/>

    <Button
        android:id="@+id/progressBar"
        style="@style/Animation_Button"
        android:text="圆环进度1"/>

    <Button
        android:id="@+id/circleProgressBar"
        style="@style/Animation_Button"
        android:text="圆环进度2"/>
    <Button
        android:id="@+id/ripple_sesame"
        style="@style/Animation_Button"
        android:text="ripple_sesame"/>
</LinearLayout>