<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <com.yanxing.titlebarlibrary.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_main="@string/animation"/>
    <Button
        android:id="@+id/alpha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alpha"
        android:layout_marginTop="@dimen/margin20"
        android:layout_marginLeft="@dimen/margin20"
        android:layout_marginRight="@dimen/margin20"/>
    <Button
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frame"
        android:layout_marginTop="@dimen/margin8"
        android:layout_marginLeft="@dimen/margin20"
        android:layout_marginRight="@dimen/margin20"/>
    <ImageView
        android:id="@+id/frame_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        android:layout_marginLeft="@dimen/margin20"
        android:layout_marginRight="@dimen/margin20"/>
    <Button
        android:id="@+id/layout_animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/layout_animation"
        android:layout_marginTop="@dimen/margin8"
        android:layout_marginLeft="@dimen/margin20"
        android:layout_marginRight="@dimen/margin20"/>
</LinearLayout>